# libpai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio.cpp  audio.h  audio_reco.cpp  audio_reco.h  bluez.cpp  bluez.h  dbus_monitor.cpp  dbus_monitor.h  face_reco.cpp  face_reco.h  led.cpp  led.h  main.cpp  pai.h  script.cpp  script.h  video.cpp  video.h  wheel.cpp  wheel.h
